[package]
name = "_test_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "0.4.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5.8"
thiserror = "1.0.40"
csv = "1.2.2"
dirs = "5.0.1"
notify = "6.0.0"
lazy_static = "1.4.0"
config = "0.13.3"
tantivy = "0.20.2"

